@@ -16,6 +16,7 @@ import javax.ejb.SessionContext;
 import javax.ejb.Stateful;
 import javax.ejb.TransactionAttribute;
 import javax.validation.constraints.NotNull;
+import java.io.BufferedInputStream;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -65,16 +66,15 @@ public class FileProcess {
     }
 
 
-    public void upload(List<File> files) {
+    public void upload(List<File> files, BufferedInputStream buffer) {
         File f = new File();
         for (File file : files) {
             f.setFolder(file.getFolder());
             f.setName(file.getName());
             f.setSize(file.getSize());
-//            f.setContent(file.getContent());
             f.setType(file.getType());
             fileDao.writeFile(f);
-            writeFileAtHDD(file);
+            writeFileAtHDD(buffer, file);
         }
     }
 
@@ -89,6 +89,9 @@ public class FileProcess {
         return fileDao.getFilesByFolderId(rootUserFolder.getId());
     }
 
+    public List<File> getFilesByFolderId(Folder folder){
+        return fileDao.getFilesByFolderId(folder.getId());
+    }
 
     public File findFileById(@NotNull Long id) {
         File fl = fileDao.getFileById(id);
@@ -126,7 +129,7 @@ public class FileProcess {
 
     //Запись на диск в директорию с именем <Логин> пользователя
 
-    public void writeFileAtHDD(@NotNull File file) {
+    public void writeFileAtHDD(@NotNull BufferedInputStream buffer, File file) {
 
         Path folderPats = Paths.get("D:\\" + user.getLogin());
         Path filePath = Paths.get("D:\\" + user.getLogin() + "\\" + file.getName());
@@ -136,7 +139,7 @@ public class FileProcess {
                 Files.createDirectory(folderPats);
             }
 
-            Files.write(filePath, file.getContent());
+            Files.write(filePath, buffer.readAllBytes());
 
         } catch (IOException e) {
             e.printStackTrace();
